Update files to fix alignment and style

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,7 +108,7 @@ h6 {
  /* End of Cloudinary images  */
 
  /* Accounts form  */
- .login {
+ .login-signup {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -118,7 +118,7 @@ h6 {
     /* max-width: 30%; */
  }
 
- .signin-border {
+ .login-signup-border {
     margin-top: 13%;
     border: .1rem dotted #a8a8a8;
     border-radius: 5%;
